...
        "level": "manage"
    ]]
    private let keychain = KeychainSwift()
    private var service = Service(pryvServiceInfoUrl: "https://reg.pryv.me/service/info")
    
    @IBOutlet private weak var authButton: UIButton!
    @IBOutlet private weak var serviceInfoUrlField: UITextField!
    
    override func viewWillAppear(_ animated: Bool) {
        if let endpoint = keychain.get(appId) {
            openConnection(apiEndpoint: endpoint, animated: false)
        }
    }
    
    override func viewDidLoad() {
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.largeTitleDisplayMode = .always
        
        let loginButton = UIBarButtonItem(title: "Log in", style: .plain, target: self, action: #selector(authenticate))
        loginButton.accessibilityIdentifier = "loginButton"
        self.navigationItem.rightBarButtonItem = loginButton
        
        serviceInfoUrlField.text = defaultServiceInfoUrl
    }
    
...
